[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["iv_curve"]

[project]
name = "iv-curve"
version = "1.0.0"
readme = "README.md"
description = "Software tools to compute and draw I-V curves"
authors = [
  {name = "Alice Surname", email = "alice.surname@superlab.edu"},
  {name = "Bob Familyname", email = "bob.familyname@superlab.edu"},
  {name = "Eve Doe", email = "eve.doe@superlab.edu"}
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "ipykernel",
  "matplotlib",
  "numpy",
  "ruff",
  "scipy",
]

requires-python = ">=3.8"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN204", "COM812", "D"]

fixable = ["ALL"]
unfixable = []

exclude = ["examples"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
